# dack-engine

./: .gitignore  Cargo.toml  Dockerfile.worker  Makefile  README.md  dack.config.example.yaml
docs/: README.md  architecture.md  authoring-souls.md  capabilities.md  channels.md  concepts.md  configuration.md  getting-started.md  operations.md  secrets-and-sandbox.md  workers.md
docs/internal/: secrets-and-sandbox-design.md
examples/: cwd_check.rs  live_bridge.rs  memory_experiment.rs
openclaude-bridge/: README.md  bridge.ts  package.json  parse.test.ts  parse.ts  runlog-recall-mcp.ts  runlog-recall.test.ts  runlog-recall.ts  telegram-ingress.ts  telegram-mcp.ts  telegram-send-mcp.ts  twitter-mcp.ts  twitter-read-mcp.ts
secrets-providers/: file_token.py  x_oauth2.py
src/: agent_def.rs  error.rs  lib.rs  main.rs  state_prompt.rs
src/bus/: mod.rs
src/cli/: mod.rs
src/config/: mod.rs
src/harness/: ingest.rs  mod.rs  modules.rs
src/identity/: gitlawb.rs  mod.rs
src/model/: baton.rs  mod.rs  proposal.rs  runlog.rs  stimulus.rs
src/queue/: memory_queue.rs  mod.rs  sqlite.rs
src/repo/: git.rs  gitcore.rs  gitlawb.rs  mod.rs  multi.rs
src/runlog/: mod.rs
src/runtime/: action_required.rs  classify.rs  claude_cli.rs  mod.rs  openclaude.rs  settle.rs
src/sandbox/: mod.rs
src/secrets/: mod.rs  providers.rs
src/sensor/: mod.rs  subprocess.rs
src/sources/: cron.rs  mod.rs
src/state/: mod.rs
src/stimuli/: mod.rs
src/webserver/: axum_listener.rs  mod.rs
